# auth-scrape

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
profiles/: notion.example.yaml
src/authscrape/: __init__.py  cli.py  config.py  cookies.py  crawler.py  doctor.py  extractor.py  fetcher.py  scaffold.py  scoring.py  search.py  state.py
src/authscrape/profiles/: confluence.example.yaml  sharepoint.example.yaml
tests/: conftest.py
tests/fixtures/cookies/: cookie_editor.json  playwright_storage.json
tests/fixtures/html/: keywords_in_title.html  no_main_no_body.html  simple_main.html  with_data_uri.html  with_inline_svg.html
tests/fixtures/profiles/: bad_unknown_key.yaml  minimal.yaml  with_focus.yaml
tests/unit/: test_cli.py  test_config.py  test_cookies.py  test_doctor.py  test_extractor.py  test_fetcher.py  test_httpx_fetcher.py  test_scaffold.py  test_scoring.py  test_search_parsing.py  test_should_save.py  test_state.py  test_url_helpers.py
